--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   text-align: center;
+  font-family: Georgia, 'Times New Roman', Times, serif
 }
 #sketch-holder,
 .button-container,
@@ -7,7 +8,17 @@ body {
   display: flex;
   justify-content: center;
 }
-
+h1{
+  margin: 1em;
+}
 button {
   margin: 10px;
+  padding: 1em;
+  font-size: 1em;
+  font-weight: bold;
 }
+
+canvas {
+  margin: 1em;
+}
+
